--- a/EDA/Model Design.ipynb
+++ b/EDA/Model Design.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
+    "import os\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "sys.path.append(\"/Users/nick/Dev/Git/BitcoinModel\")"
+    "os.chdir(\"/Users/nick/Dev/Git/BitcoinModel\")"
    ]
   },
   {
@@ -53,74 +53,164 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'DB'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-64cbcc9599af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBitcoinData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbitcoin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2016\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbitcoin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbitcoin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1D'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pad'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/nick/Dev/Git/BitcoinModel/Signals/BitcoinData.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfigparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConfigParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"config.ini\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDBCache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcached\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/nick/Dev/Git/BitcoinModel/Tools/DBCache.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfigparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConfigParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"config.ini\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         url = \"http://{}:{}\".format(self.config['DB']['hostname'],\n\u001b[0m\u001b[1;32m     28\u001b[0m                                     self.config['DB']['port'])\n\u001b[1;32m     29\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcouchdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mServer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDB_NAME\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/nick/anaconda/lib/python3.5/configparser.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    954\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    955\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefault_section\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_section\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 956\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    957\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_proxies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    958\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'DB'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bd = BitcoinData()\n",
-    "bitcoin = bd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
-    "bitcoin = bitcoin.resample('1D').fillna(method='pad')"
+    "bitcoin = bd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
+    "#bitcoin = bitcoin.resample('1D').fillna(method='pad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "wd = WikipediaData()\n",
-    "wiki = wd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
-    "wiki = wiki.resample('1D').fillna(method='pad')"
+    "wiki = wd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
+    "#wiki = wiki.resample('1D').fillna(method='pad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "fxd = FXData()\n",
-    "fx = fxd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
-    "fx = fx.resample('1D').fillna(method='pad')"
+    "fx = fxd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
+    "#fx = fx.resample('1D').fillna(method='pad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = pd.concat([bitcoin, wiki, fx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "x.tail()"
+    "x = bitcoin.merge(fx, how='outer', left_index=True, right_index=True)\\\n",
+    "           .merge(wiki, how='outer', left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check for missing data and fill forward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "High       1\n",
+       "Low        1\n",
+       "Open       1\n",
+       "Volume     1\n",
+       "USDCNY    58\n",
+       "USDEUR    58\n",
+       "VIX       58\n",
+       "views      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x['USDCNY'].fillna(method='pad', inplace=True)\n",
+    "x['USDEUR'].fillna(method='pad', inplace=True)\n",
+    "x['VIX'].fillna(method='pad', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add transformations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x['next_open'] = x['Open'].shift(-1)\n",
+    "x['change'] = x['next_open'] - x['Open']\n",
+    "x['next_day_higher'] = x['change'].map(lambda x: x > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def addlogret(df, col):\n",
+    "    df[col+'_logret'] = np.log(df[col]) - np.log(df[col].shift(1))\n",
+    "def addewma(df, col):\n",
+    "    for i in [3, 10, 30]:\n",
+    "        df[col+'_ewma_'+str(i)] = df[col].ewm(halflife=i).mean()\n",
+    "def addewmvar(df, col):\n",
+    "    for i in [3, 10, 30]:\n",
+    "        df[col+'_ewmvar_'+str(i)] = df[col].ewm(halflife=i).var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in ['Open', 'Volume', 'USDCNY', 'USDEUR', 'VIX', 'views']:\n",
+    "    addlogret(x, col)\n",
+    "    addewma(x, col)\n",
+    "    addewma(x, col+\"_logret\")\n",
+    "    addewmvar(x, col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.dropna(inplace=True)"
    ]
   },
   {
@@ -131,10 +221,245 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y = x['next_day_higher']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.drop(['next_day_higher'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=100000.0, class_weight=None, dual=False,\n",
+       "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
+       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg = linear_model.LogisticRegression(C=1e5)\n",
+    "logreg.fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model score: 56.5%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model score: {:.1f}%\".format(100*logreg.score(x, y)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Test predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from PerfAnalysis.PnL import PnL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.iloc[0] == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value 269.035323936\n",
+      "year_frac 0.4602739726027397\n",
+      "ret 169.035323936\n",
+      "fact 1.69035323936\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'APR': 212.82985561414253,\n",
+       " 'cash': 0,\n",
+       " 'position': 0.51604581259045823,\n",
+       " 'value': 269.0353239359095}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pnl = PnL()\n",
+    "pnl.calc_pnl(x, y, price_col=\"Open\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "219% (annualized) return over the training set, even including 25 bp commission, but how about the final six months of the year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bitcoin = bd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
+    "wiki = wd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
+    "fx = fxd.get(datetime(2016, 6, 1), datetime(2017, 1, 1))\n",
+    "x = bitcoin.merge(fx, how='outer', left_index=True, right_index=True)\\\n",
+    "           .merge(wiki, how='outer', left_index=True, right_index=True)\n",
+    "x['USDCNY'].fillna(method='pad', inplace=True)\n",
+    "x['USDEUR'].fillna(method='pad', inplace=True)\n",
+    "x['VIX'].fillna(method='pad', inplace=True)\n",
+    "x['next_open'] = x['Open'].shift(-1)\n",
+    "x['change'] = x['next_open'] - x['Open']\n",
+    "x['next_day_higher'] = x['change'].map(lambda x: x > 0)\n",
+    "for col in ['Open', 'Volume', 'USDCNY', 'USDEUR', 'VIX', 'views']:\n",
+    "    addlogret(x, col)\n",
+    "    addewma(x, col)\n",
+    "    addewma(x, col+\"_logret\")\n",
+    "    addewmvar(x, col)\n",
+    "x.drop(['next_day_higher'], axis=1, inplace=True)\n",
+    "x.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pred = logreg.predict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value 74.6492343069\n",
+      "year_frac 0.6273972602739726\n",
+      "ret -25.3507656931\n",
+      "fact -0.253507656931\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'APR': -111.22094549159256,\n",
+       " 'cash': 74.649234306898478,\n",
+       " 'position': 0,\n",
+       " 'value': 74.649234306898478}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pnl.calc_pnl(x, pred, price_col=\"Open\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A ha, much less successful on the test dataset."
    ]
   }
  ],
