Cleanup Jupyter Notebook

--- a/EDA/Model 1 - Logistic Regression with linear factors.ipynb
+++ b/EDA/Model 1 - Logistic Regression with linear factors.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "os.chdir(\"/Users/nick/Dev/Git/BitcoinModel\")"
+    "os.chdir(\"..\")"
    ]
   },
   {
@@ -56,8 +56,7 @@
    "outputs": [],
    "source": [
     "bd = BitcoinData()\n",
-    "bitcoin = bd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
-    "#bitcoin = bitcoin.resample('1D').fillna(method='pad')"
+    "bitcoin = bd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))"
    ]
   },
   {
@@ -69,8 +68,7 @@
    "outputs": [],
    "source": [
     "wd = WikipediaData()\n",
-    "wiki = wd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
-    "#wiki = wiki.resample('1D').fillna(method='pad')"
+    "wiki = wd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))"
    ]
   },
   {
@@ -82,8 +80,7 @@
    "outputs": [],
    "source": [
     "fxd = FXData()\n",
-    "fx = fxd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))\n",
-    "#fx = fx.resample('1D').fillna(method='pad')"
+    "fx = fxd.get(datetime(2016, 1, 1), datetime(2016, 6, 1))"
    ]
   },
   {
@@ -326,45 +323,13 @@
     {
      "data": {
       "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.iloc[0] == False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Value 269.035323936\n",
-      "year_frac 0.4602739726027397\n",
-      "ret 169.035323936\n",
-      "fact 1.69035323936\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
        "{'APR': 212.82985561414253,\n",
        " 'cash': 0,\n",
        " 'position': 0.51604581259045823,\n",
        " 'value': 269.0353239359095}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -422,21 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Value 74.6492343069\n",
-      "year_frac 0.6273972602739726\n",
-      "ret -25.3507656931\n",
-      "fact -0.253507656931\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -446,7 +401,7 @@
        " 'value': 74.649234306898478}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
